--- a/MySharpDXGame/packages.config
+++ b/MySharpDXGame/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FbxSharp" version="0.9" targetFramework="net45" />
   <package id="SharpDX" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.D3DCompiler" version="4.0.1" targetFramework="net45" />
   <package id="SharpDX.Desktop" version="4.0.1" targetFramework="net45" />
