--- a/MySharpDXGame/packages.config
+++ b/MySharpDXGame/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FbxSharp" version="0.9" targetFramework="net45" />
+  <package id="JitterPhysics" version="0.2.0.20" targetFramework="net45" />
   <package id="SharpDX" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.D3DCompiler" version="4.0.1" targetFramework="net45" />
   <package id="SharpDX.Desktop" version="4.0.1" targetFramework="net45" />
@@ -10,4 +11,5 @@
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.Mathematics" version="4.0.1" targetFramework="net45" />
   <package id="SharpDX.RawInput" version="4.2.0" targetFramework="net45" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net45" />
 </packages>
