Optimized batching, now only queues vertexes to be updated/drawn that changed.

--- a/MySharpDXGame/packages.config
+++ b/MySharpDXGame/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AssimpNet" version="5.0.0-beta1" targetFramework="net45" />
   <package id="FbxSharp" version="0.9" targetFramework="net45" />
   <package id="JitterPhysics" version="0.2.0.20" targetFramework="net45" />
   <package id="SharpDX" version="4.2.0" targetFramework="net45" />
