--- a/MySharpDXGame/packages.config
+++ b/MySharpDXGame/packages.config
@@ -4,13 +4,14 @@
   <package id="FbxSharp" version="0.9" targetFramework="net45" />
   <package id="JitterPhysics" version="0.2.0.20" targetFramework="net45" />
   <package id="SharpDX" version="4.2.0" targetFramework="net45" />
-  <package id="SharpDX.D3DCompiler" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.Desktop" version="4.0.1" targetFramework="net45" />
+  <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net45" />
+  <package id="SharpDX.Desktop" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.Diagnostics" version="2.0.4" targetFramework="net45" />
-  <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net45" />
-  <package id="SharpDX.Direct3D11" version="4.0.1" targetFramework="net45" />
+  <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net45" />
+  <package id="SharpDX.DirectInput" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net45" />
-  <package id="SharpDX.Mathematics" version="4.0.1" targetFramework="net45" />
+  <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net45" />
   <package id="SharpDX.RawInput" version="4.2.0" targetFramework="net45" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net45" />
 </packages>
